<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_aboutApp"
            android:title="@string/menu_aboutApp" />
    </group>

    <item android:title="Developer">
        <menu>
            <item
                android:id="@+id/nav_about_developer"
                android:title="@string/menu_about_developer" />
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/menu_feedback" />
        </menu>
    </item>

</menu>
